--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        <link rel="stylesheet" href="{{ asset('style/app.css') }}">
         {% block stylesheets %}
+        
         {% endblock %}
 
         {% block javascripts %}
@@ -12,6 +15,15 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            <nav class="navbar navbar-expand-lg navbar-light bg-light px-1">
+                <div class="container-fluid">
+                    <div class="collapse navbar-collapse" id="navbar-collapsable">
+                        <a class="nav-link text-black-50" href="{{path('app_login')}}">Log In</a>
+                        <a href="#" class="btn btn-dark">Sign up</a>
+                    </div>
+                </div>
+            </nav>
+        {% endblock %}
     </body>
 </html>
