--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,19 +10,19 @@
     
     <div>
         <label for="Nombre:"></label>
-        {{ form_row(registrationForm.nombre) }}
+        {{ form_row(registrationForm.name) }}
     </div>
     <div>
         <label for="Apellido1:"></label>
-        {{ form_row(registrationForm.apellido1) }}
+        {{ form_row(registrationForm.lastname1) }}
     </div>
     <div>
         <label for="Apellido2:"></label>
-        {{ form_row(registrationForm.apellido2) }}
+        {{ form_row(registrationForm.lastname2) }}
     </div>
     <div>
         <label for="Telefono:"></label>
-        {{ form_row(registrationForm.telefono) }}
+        {{ form_row(registrationForm.phone) }}
     </div>
     <div>
         <label for="Email:"></label>
