--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -25,19 +25,19 @@
             </tr>
             <tr>
                 <th>Nombre</th>
-                <td>{{ user.nombre }}</td>
+                <td>{{ user.name }}</td>
             </tr>
             <tr>
                 <th>Apellido1</th>
-                <td>{{ user.apellido1 }}</td>
+                <td>{{ user.lastname1 }}</td>
             </tr>
             <tr>
                 <th>Apellido2</th>
-                <td>{{ user.apellido2 }}</td>
+                <td>{{ user.lastname2 }}</td>
             </tr>
             <tr>
                 <th>Telefono</th>
-                <td>{{ user.telefono }}</td>
+                <td>{{ user.phone }}</td>
             </tr>
         </tbody>
     </table>
