--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -26,10 +26,10 @@
                 <td>{{ user.email }}</td>
                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
                 <td>{{ user.password }}</td>
-                <td>{{ user.nombre }}</td>
-                <td>{{ user.apellido1 }}</td>
-                <td>{{ user.apellido2 }}</td>
-                <td>{{ user.telefono }}</td>
+                <td>{{ user.name }}</td>
+                <td>{{ user.lastname1 }}</td>
+                <td>{{ user.lastname2 }}</td>
+                <td>{{ user.phone }}</td>
                 <td>
                     <a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
                     <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
