--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,8 @@
         {% endblock %}
 
         {% block javascripts %}
+            {{encore_entry_script_tags('app')}}
+            {{encore_entry_script_tags('adminkit')}}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
