--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -12,29 +12,29 @@
             
             <div class="mb-3">
                 <label for="registrationForm_name" class="form-label">Nombre:</label>
-                {{ form_widget(registrationForm.name, {'attr': {'class': 'form-control'}}) }}
+                {{ form_widget(registrationForm.name, {'attr': {'class': 'form-control border-primary'}}) }}
             </div>
             <div class="mb-3">
                 <label for="registrationForm_firstSurname" class="form-label">Primer Apellido:</label>
-                {{ form_widget(registrationForm.firstSurname, {'attr': {'class': 'form-control'}}) }}
+                {{ form_widget(registrationForm.firstSurname, {'attr': {'class': 'form-control border-primary'}}) }}
             </div>
             <div class="mb-3">
                 <label for="registrationForm_secondSurname" class="form-label">Segundo Apellido:</label>
-                {{ form_widget(registrationForm.secondSurname, {'attr': {'class': 'form-control'}}) }}
+                {{ form_widget(registrationForm.secondSurname, {'attr': {'class': 'form-control border-primary'}}) }}
             </div>
             <div class="mb-3">
                 <label for="registrationForm_phone" class="form-label">Teléfono:</label>
-                {{ form_widget(registrationForm.phone, {'attr': {'class': 'form-control'}}) }}
+                {{ form_widget(registrationForm.phone, {'attr': {'class': 'form-control border-primary'}}) }}
             </div>
             <div class="mb-3">
                 <label for="registrationForm_email" class="form-label">Correo Electrónico:</label>
-                {{ form_widget(registrationForm.email, {'attr': {'class': 'form-control'}}) }}
+                {{ form_widget(registrationForm.email, {'attr': {'class': 'form-control border-primary'}}) }}
             </div>
             <div class="mb-3">
                 <label for="registrationForm_plainPassword" class="form-label">Contraseña:</label>
                 {{ form_widget(registrationForm.plainPassword, {
                     'label': 'Contraseña',
-                    'attr': {'class': 'form-control'}
+                    'attr': {'class': 'form-control border-primary'}
                 }) }}
             </div>
             <div class="mb-3 form-check">
