--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,7 +8,7 @@
         <h1 class="text-dark">Hello {{ controller_name }}! ✅</h1>
         <a href="{{ path('app_logout') }}" class="btn btn-secondary">Logout</a>
         <br>
-        <a href="{{ path('add_activity') }}" class="btn btn-primary">Add new Activity</a>
+        <a href="{{ path('app_activity_new') }}" class="btn btn-primary">Add new Activity</a>
     </div>
 </div>
 {% endblock %}
