--- a/templates/finishedActivity/index.html.twig
+++ b/templates/finishedActivity/index.html.twig
@@ -8,17 +8,15 @@
     <table class="table">
         <thead>
             <tr>
+                <th>Name</th>
                 <th>Id</th>
-                <th>Category</th>
                 <th>Date</th>
-                <th>actions</th>
             </tr>
         </thead>
         <tbody>
         {% for activity in activities %}
             <tr>
                 <td>{{ activity.id }}</td>
-                <td>{{ activity.category }}</td>
                 <td>{{ activity.date ? activity.date|date('d-m-Y') : '' }}</td>
                 <td>
                     <a href="{{ path('app_activity_show', {'id': activity.id}) }}">show</a>
@@ -30,8 +28,12 @@
                 <td colspan="4">no records found</td>
             </tr>
         {% endfor %}
+        
         </tbody>
     </table>
 
-    <a href="{{ path('app_activity_new') }}">Create new Activity</a>
+    <div class="d-flex justify-content-between">
+        <a href="{{ path('app_home') }}" class="btn btn-outline-secondary">Volver</a>
+    </div>
+
 {% endblock %}
