--- a/templates/subcategory/index.html.twig
+++ b/templates/subcategory/index.html.twig
@@ -26,7 +26,7 @@
         <tbody>
             {% for subcategory in subcategories %}
                 <tr>
-                    <td>{{ subcategory.nameSub }}</td>
+                    <td>{{ subcategory.name }}</td>
                     <td>{{ subcategory.category.nameCat }}</td>
                     <td>
                         <a href="{{ path('app_subcategory_show', {id: subcategory.id}) }}">View</a> |
