--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,39 +3,51 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-    <form method="post">
-        {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
+    <div class="container mt-5">
+        <div class="card shadow-sm border-primary">
+            <div class="card-body">
+            <form method="post">
+                {% if error %}
+                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                {% endif %}
 
-        {% if app.user %}
-            <div class="mb-3">
-                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-            </div>
-        {% endif %}
+                {% if app.user %}
+                    <div class="mb-3">
+                        Sesión iniciada ({{ app.user.userIdentifier }}) <a href="{{ path('app_home') }}" class="btn btn-primary">Cerrar sesión</a>
+                    </div>
+                {% endif %}
 
-        <h1 class="h3 mb-3 font-weight-normal">INICIAR SESION</h1>
-        <label for="username">Email</label>
-        <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
-        <label for="password">Password</label>
-        <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
+                <div class="mb-3">
+                    <h1 class="h3 mb-3 font-weight-normal">INICIAR SESIÓN</h1>
+                    <label for="username">Email</label>
+                    <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
+                    <label for="password">Contraseña</label>
+                    <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
 
-        <input type="hidden" name="_csrf_token"
-               value="{{ csrf_token('authenticate') }}"
-        >
+                    <input type="hidden" name="_csrf_token"
+                        value="{{ csrf_token('authenticate') }}"
+                        >
+                </div>
+    
+                <div class="mb-3">
+                    <button type="submit" class="btn btn-primary">Entrar</button>
+                </div>
 
-        {#
-            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-            See https://symfony.com/doc/current/security/remember_me.html
+                <div class="mb-3">
+                    <a href="{{ path('app_register') }}" class="btn btn-primary">Registrarte</a>
+                </div>
 
-            <div class="checkbox mb-3">
-                <input type="checkbox" name="_remember_me" id="_remember_me">
-                <label for="_remember_me">Remember me</label>
-            </div>
-        #}
+                <div class="mb-3">
+                    <a href="{{ path('app_home') }}" class="btn btn-primary">Volver a Home</a>
+                </div>
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Entrar
-        </button>
-    </form>
+                <div class="mb-3">
+                    ¿Has olvidado la contraseña? <a href="{{ path('app_register') }}" class="btn btn-primary">Recuperar Contraseña</a>
+                </div>
+
+            </form>
+        </div>
+    </div>
+</div>
+    
 {% endblock %}
