--- a/templates/catalog/index.html.twig
+++ b/templates/catalog/index.html.twig
@@ -18,7 +18,7 @@
                 <h5 class="card-title">Actividades Registradas</h5>
             </div>
             <div class="card-body">
-                <table id="activityBBDD_table" class="table table-striped table-hover">
+                <table id="catalog_table" class="table table-striped table-hover">
                     <thead class="thead-light">
                         <tr>
                             <th scope="col">ID</th>
@@ -55,7 +55,7 @@
     <!-- Iniciar JS de DataTables -->
     <script>
         $(document).ready( function() {
-            $('#activityBBDD_table').DataTable({
+            $('#catalog_table').DataTable({
                 responsive:true
             });
         });
